Make delete track dialog less confusing.

TODO: we should probably add the collection name in there but need some
refactoring.

Patch by Gilles Habran.

BUG:263693
FIXED-IN: 2.5
REVIEW: 103026